# gst-plugins-bad

./: configure.ac
ext/: Makefile.am
gst-libs/gst/: Makefile.am
